# Lattice

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  railway.json  rustfmt.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  book.yml  ci.yml  mutants.yml  public-api.yml  release.yml
benches/: put_get.rs
book/: book.toml
book/src/: 00-intro.md  01-wal.md  02-memtable.md  03-sstable.md  04-bloom.md  05-compaction.md  06-snapshots.md  07-bench.md  08-not-yet.md  09-concurrency.md  11-transactions.md  12-async.md  13-observability.md  14-metrics.md  15-design-notes.md  16-scan-iter.md  17-comparison.md  18-production-readiness.md  19-encryption-design.md  SUMMARY.md
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: main.rs
crates/lattice-cli/tests/: ops_subcommands.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/examples/: 01_basic_kv.rs  02_transaction.rs  03_snapshot.rs  04_streaming_scan.rs  05_compact_async.rs  06_stats.rs
crates/lattice-core/fuzz/: Cargo.toml
crates/lattice-core/fuzz/fuzz_targets/: engine_history.rs  manifest_open.rs  sstable_open.rs  wal_open.rs
crates/lattice-core/src/: async_api.rs  bloom.rs  cipher.rs  compaction.rs  compactor.rs  conflict_tracker.rs  error.rs  lib.rs  manifest.rs  memtable.rs  metrics_compat.rs  scan_iter.rs  snapshot.rs  sstable.rs  transaction.rs  wal.rs
crates/lattice-core/tests/: async_api.rs  backup.rs  compact_async.rs  compaction.rs  concurrency.rs  disk_inventory.rs  group_commit.rs  integration_roundtrip.rs  property_durability.proptest-regressions  property_durability.rs  read_only.rs  recovery.rs  scan_iter.rs  scan_range.rs  snapshot.rs  sstable_flush.rs  stats.rs  transactions.rs
crates/lattice-loom-tests/: Cargo.toml
crates/lattice-loom-tests/src/: lib.rs
crates/lattice-loom-tests/tests/: loom_compactor.rs  loom_conflict.rs
deploy/: Caddyfile  Dockerfile
