[workspace]
resolver = "3"
members = [
    "crates/lattice-core",
    "crates/lattice-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Nicolas Pilegi De Nigris <nicolas.denigris91@icloud.com>"]
repository = "https://github.com/NicolasDeNigris91/Lattice"
homepage = "https://lattice.nicolaspilegidenigris.dev"
readme = "README.md"
keywords = ["lsm-tree", "database", "storage", "kv", "embedded"]
categories = ["database-implementations", "data-structures"]

[workspace.dependencies]
# Internal
lattice-core = { path = "crates/lattice-core", version = "0.1.0" }

# Serialization and binary formats
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
bytes = "1.7"

# Hashing and integrity
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode", "std"] }

# Concurrency primitives
parking_lot = "0.12"

# Errors and CLI
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testing and bench
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations for a single-author project.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `redundant_pub_crate` (nursery) and rustc's `unreachable_pub` are in
# direct conflict on items inside private modules. We keep `pub(crate)`
# because it states intent more clearly, and silence the nursery lint.
redundant_pub_crate = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
