[workspace]
resolver = "3"
members = [
    "crates/lattice-core",
    "crates/lattice-cli",
    "crates/lattice-loom-tests",
]

[workspace.package]
version = "1.17.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Nicolas Pilegi De Nigris <nicolas.denigris91@icloud.com>"]
repository = "https://github.com/NicolasDeNigris91/Lattice"
homepage = "https://lattice.nicolaspilegidenigris.dev"
documentation = "https://docs.rs/lattice-core"
readme = "README.md"
keywords = ["lsm-tree", "database", "storage", "kv", "embedded"]
categories = ["database-implementations", "data-structures"]

[workspace.dependencies]
# Internal
lattice-core = { path = "crates/lattice-core", version = "1.17.0" }

# Serialization and binary formats
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
bytes = "1.7"

# Hashing and integrity
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode", "std"] }

# Concurrency primitives
parking_lot = "0.12"

# Errors and CLI
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Async runtime (optional; gated behind the `tokio` feature on lattice-core)
tokio = { version = "1.41", default-features = false }

# Metrics facade (optional; gated behind the `metrics` feature on
# lattice-core). The user installs a recorder (Prometheus, statsd,
# OTel, ...); the engine just records via the facade macros, which
# are no-ops when no recorder is installed.
metrics = { version = "0.24", default-features = false }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Captures `tracing` events emitted from a `#[traced_test]` test so
# the test body can assert on them. Wraps each annotated test in a
# scoped subscriber, so concurrent tests do not see each other's
# events.
tracing-test = "0.2"

# Testing and bench
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
# `--cfg loom` is set by the `lattice-loom-tests` invocation
# documented in `crates/lattice-loom-tests/Cargo.toml`. Register it
# here so default `cargo check` does not emit `unexpected_cfgs`
# warnings for the gated `#[cfg(loom)]` blocks in the source tree.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations for a single-author project.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `redundant_pub_crate` (nursery) and rustc's `unreachable_pub` are in
# direct conflict on items inside private modules. We keep `pub(crate)`
# because it states intent more clearly, and silence the nursery lint.
redundant_pub_crate = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
