[package]
name = "lattice-cli"
description = "Command line interface for the Lattice storage engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
