[package]
name = "lattice-cli"
description = "Command line interface for the Lattice storage engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["lsm-tree", "database", "cli", "kv", "embedded"]
categories = ["command-line-utilities", "database-implementations"]
include = ["src/**/*", "Cargo.toml"]

[lints]
workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
