[package]
name = "lattice-core"
description = "Embeddable LSM-tree key-value storage engine, written from scratch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Limit the published artifact to source files plus the manifest.
# `Cargo.toml` and the workspace `README.md` are auto-included via
# the manifest and the `readme` field; the SPDX `license` field
# carries the licence metadata for crates.io and docs.rs. Without
# this filter, `cargo publish` packages every untracked file in
# the crate directory.
include = ["src/**/*", "Cargo.toml"]

[lints]
workspace = true

[features]
default = []
# Adds `AsyncLattice`, a thin wrapper that runs the synchronous engine
# on tokio's blocking pool via `spawn_blocking`. Honest about being
# "async-friendly" rather than "natively async": locks and file I/O
# remain synchronous under the hood. Native async (replacing
# parking_lot and std::fs with their tokio equivalents) is a v2.x
# milestone.
tokio = ["dep:tokio", "tokio/rt"]
# Records counters and histograms through the `metrics` crate facade.
# Zero-cost when no recorder is installed at runtime; the user wires
# their own exporter (e.g. `metrics-exporter-prometheus`).
metrics = ["dep:metrics"]

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }
lz4_flex = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-test = { workspace = true }

# Loom replaces `std::sync` and `std::sync::atomic` with checked
# variants and runs the conflict tracker under every legal
# interleaving of the spawned threads. Pulled in only when
# `--cfg loom` is set so default builds skip the dependency tree
# entirely. Loom tests live in the `lattice-loom-tests` crate so
# they are compiled in isolation, away from `tokio` (which itself
# does not build under `--cfg loom`).
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "put_get"
harness = false
path = "../../benches/put_get.rs"
