[package]
name = "lattice-loom-tests"
description = "Loom model-checking suite for the lattice-core conflict tracker."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
# Empty placeholder library so the workspace member resolves; the
# real content lives under `tests/`.
path = "src/lib.rs"

# Loom is pulled in only when `--cfg loom` is active. Default
# `cargo test --workspace` builds an empty test target and skips
# the loom dependency tree entirely. Run the suite with:
#   RUSTFLAGS="--cfg loom" cargo test -p lattice-loom-tests --release
[target.'cfg(loom)'.dependencies]
lattice-core = { workspace = true }
loom = "0.7"
